--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "site",
+  "homepage": "https://github.com/Henry-Icon/Frontend-Dev-Portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
