Added base config for GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "site",
-  "homepage": "https://github.com/Henry-Icon/Frontend-Dev-Portfolio/",
+  "homepage": "https://henry-icon.github.io/Frontend-Dev-Portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+},
   "dependencies": {
     "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
